Fix compilation error and tag and tagfamily handling